--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 	<h2 id="result" class="hidden"></h2>
 	<div class="row">
 		<div class="column">
-			<img src="Dice Images/Dice 1.png" class="img1" alt="Player 1"></img>
+			<img src="Dice 1.png" class="img1" alt="Player 1"></img>
 			<p class="player-label">Player 1</p>
 		</div>
 		<div class="column">
-			<img src="Dice Images/Dice 6.png" class="img2" alt="Player 2"></img>
+			<img src="Dice 6.png" class="img2" alt="Player 2"></img>
 			<p class="player-label">Player 2</p>
 		</div>
 	</div>
